Add route to create multimanga
